2010-03-13  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/mantepse.input.pamphlet: Somos==true is not working
	correctly, Somos and maxPower==1 should throw an error.

2010-03-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/permgrps.spad.pamphlet: Restructure and
	speed up.

2010-02-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	New parser for Spad compiler.
	* src/interp/s-parser.lisp: New file.
	src/interp/parsing.lisp, src/interp/postpar.boot,
	src/interp/macros.lisp, src/interp/Makefile.in,
	src/interp/util.lisp, src/interp/bootlex.lisp: Adjust.
	src/interp/newaux.lisp, src/interp/fnewmeta.lisp,
	src/interp/fnew.meta: Remove.

2010-02-20  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/interp/g-error.boot, src/interp/setvart.boot,
	src/interp/spaderror.lisp, src/lisp/fricas-package.lisp: introduce
	new ')set breakmode quit' which quits on error with non-zero exit
	code

2010-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mfinfact.spad.pamphlet,
	src/algebra/twofact.spad.pamphlet: Try to avoid field
	extensions during factorization.

2010-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/vecrec.spad.pamphlet,
	src/algebra/u32vec.spad.pamphlet: Spent less time in
	rational reconstruction.

2010-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/listgcd.spad.pamphlet: localgcd(): Use
	heuristic gcd also for high degree.

2010-02-18  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/ssolve.spad.pamphlet: do not evaluate coefficients
	too eagerly.

	* src/algebra/mantepse.spad.pamphlet: delete unused line.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerfn.boot: Faster coercions for univariate
	polynomials.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerce.boot, src/interp/setq.lisp
	src/interp/clammed.boot: Cache function lookups
	during coercions.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
