@@ -1,0 +1,58 @@
+\documentclass{article}
+\usepackage{axiom,url}
+\begin{document}
+\title{\$SPAD/src/input mantepse.input}
+\author{Martin Rubey}
+\maketitle
+\begin{abstract}
+\end{abstract}
+\eject
+\tableofcontents
+\eject
+\section{Testing unittest.spad.pamphlet}
+We want to test whether the testing facility work correctly.
+
+<<*>>=
+)set break resume
+)expose UnittestCount UnittestAux Unittest
+)expose RECOP
+testsuite "unittest"
+<<TEST testLibraryError>>
+@
+
+<<*>>=
+expected() ==    
+--    messagePrint("testsuite | testcases: failed (total) | tests: failed (total)")$OutputForm
+--    messagePrint("unittest                    1     (1)               1     (4)")$OutputForm
+--    messagePrint("=============================================================================")$OutputForm
+    messagePrint("File summary.")$OutputForm
+    messagePrint("unexpected failures: 1")$OutputForm
+    messagePrint("expected failures: 1")$OutputForm
+    messagePrint("unexpected passes: 1")$OutputForm
+    messagePrint("total tests: 4")$OutputForm
+
+statistics()
+expected()
+@
+\subsection{testLibraryError}
+<<TEST testLibraryError>>=
+testcase "testLibraryError"
+
+-- pass
+testLibraryError("1/0")
+
+-- unexpected failure
+testLibraryError("1")
+
+-- unexpected pass
+xftestLibraryError("1/0")
+
+-- expected failure
+xftestLibraryError("1")
+@ 
+
+\eject
+\begin{thebibliography}{99}
+\bibitem{1} nothing
+\end{thebibliography}
+\end{document}
