@@ -1,5 +1,8 @@
 2010-03-13  Martin Rubey  <martin.rubey@univie.ac.at>
 
+	* src/input/unittest.input.pamphlet, src/input/Makefile.in: test
+	unittesting facility. (1 failure!)
+
 	* src/input/mantepse.input.pamphlet: Somos==true is not working
 	correctly, Somos and maxPower==1 should throw an error.
 
